; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/misc/extr_mperror.c_mperror_heartbeat_switch_off.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/misc/extr_mperror.c_mperror_heartbeat_switch_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64 }

@mperror_heart_beat = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@MICROPY_SYS_LED_PORT = common dso_local global i32 0, align 4
@MICROPY_SYS_LED_PORT_PIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mperror_heartbeat_switch_off() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mperror_heart_beat, i32 0, i32 2), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mperror_heart_beat, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mperror_heart_beat, i32 0, i32 0), align 8
  %4 = load i32, i32* @MICROPY_SYS_LED_PORT, align 4
  %5 = load i32, i32* @MICROPY_SYS_LED_PORT_PIN, align 4
  %6 = call i32 @MAP_GPIOPinWrite(i32 %4, i32 %5, i32 0)
  br label %7

7:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @MAP_GPIOPinWrite(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
